# arp-sh

./: Cargo.toml  build.rs
.github/workflows/: release.yml
src/: consts.rs  diff.rs  embed.rs  errors.rs  format.rs  hash.rs  main.rs  rest_response.rs  routes.rs  state.rs  utils.rs
src/static/: ast-query.js  diff2html.js  js-beautify.js  main.js  tailwind-3.4.1.js
src/templates/: ascii-pure.twig  ascii.twig  ast_query-pure.twig  ast_query.twig  diff-pure.twig  diff.twig  format-pure.twig  format.twig  hash-pure.twig  hash.twig  pass-pure.twig  pass.twig  ui.twig  uuid-pure.twig  uuid.twig
src/templates/include/: error-pure.twig  error.twig  nav-pure.twig  nav.twig
src/templates/layout/: base-pure.twig  base.twig
src/templates/macro/: common-pure.twig  common.twig
